# rs2wapy

./: .gitattributes  .gitignore  .travis.yml  LICENSE  MANIFEST.in  README.md  mypy.ini  pyproject.toml  requirements.txt  setup.cfg  setup.py
rs2wapy/: __init__.py  _version.py  rs2wapy.py
rs2wapy/adapter/: adapter.py
rs2wapy/adapters/: __init__.py  adapter.py  adapters.py
rs2wapy/epicgamesstore/: __init__.py  epicgamesstore.py
rs2wapy/models/: __init__.py  models.py
rs2wapy/parsing/: __init__.py  parsing.py
rs2wapy/steam/: __init__.py  steam.py
src/rs2wapy/: __init__.py  _version.py
tests/: run_mypy.sh
