[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "rs2wapy"
dynamic = ["version"]
description = "Rising Storm 2: Vietnam WebAdmin Python Interface"
readme = "README.md"
requires-python = ">=3.9"
license-files = { paths = ["LICENSE"] }
keywords = ["automation webadmin ue3 rcon"]
authors = [
    { name = "Tuomo Kriikkula", email = "tuokri@tuta.io" },
]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "Logbook==1.8.2",
    "beautifulsoup4==4.13.4",
    "pycurl==7.45.6",
    "regex==2024.11.6",
    "requests==2.23.4",
    "soupsieve==2.7",
    "steam==1.4.4",
]
[project.optional-dependencies]
dev = [
    "hatch",
    "mypy",
    "ruff",
]

[project.urls]
Documentation = "https://github.com/tuokri/rs2wapy#readme"
Issues = "https://github.com/tuokri/rs2wapy/issues"
Source = "https://github.com/tuokri/rs2wapy"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "rs2wapy/_version.py"
